--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,13 +11,13 @@
         </ion-tab-button>
 
         <ion-tab-button tab="backup">
-            <ion-icon aria-hidden="true" name="cloud-upload"></ion-icon>
-            <ion-label>Backup</ion-label>
+            <ion-icon aria-hidden="true" name="card"></ion-icon>
+            <ion-label>Payments</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="settings">
-            <ion-icon aria-hidden="true" name="settings"></ion-icon>
-            <ion-label>Settings</ion-label>
+            <ion-icon aria-hidden="true" name="person-circle"></ion-icon>
+            <ion-label>Account</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
