--- a/src/global.scss
+++ b/src/global.scss
@@ -36,3 +36,5 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 /* @import "@ionic/angular/css/palettes/dark.system.css"; */
+
+/* (Global ionic toast styling removed in favor of custom snackbar component) */
