--- a/src/app/payments/payments.page.html
+++ b/src/app/payments/payments.page.html
@@ -8,6 +8,64 @@
     <!-- Payment Transactions -->
     <app-payment-transactions [transactions]="allTransactions"></app-payment-transactions>
 
+    <!-- Member Selection Modal -->
+    <ion-modal
+        [isOpen]="isMemberSelectOpen"
+        cssClass="member-select-modal"
+        (didDismiss)="closeMemberSelect()">
+        <ng-template>
+            <div class="selection-modal">
+                <div class="selection-header">
+                    <h2 class="selection-title">Select Member</h2>
+                </div>
+
+                <div class="selection-body">
+                    <div class="selection-search">
+                        <span class="material-icons">search</span>
+                        <input
+                            type="search"
+                            placeholder="Search members..."
+                            [value]="memberSearchQuery"
+                            (input)="onMemberSearchChange($event)"
+                        />
+                    </div>
+
+                    <label class="selection-option"
+                        *ngFor="let member of filteredMembersForSelection">
+                        <input
+                            type="radio"
+                            class="selection-radio"
+                            name="memberSelection"
+                            [value]="member.id"
+                            [checked]="member.id === selectedMemberId"
+                            (change)="selectedMemberId = member.id"
+                        />
+                        <span class="selection-label">
+                            {{ member.name }} ({{ member.membershipType }})
+                        </span>
+                    </label>
+                </div>
+
+                <div class="selection-footer">
+                    <button
+                        type="button"
+                        class="selection-button cancel"
+                        (click)="closeMemberSelect()">
+                        Cancel
+                    </button>
+
+                    <button
+                        type="button"
+                        class="selection-button primary"
+                        [disabled]="!selectedMemberId"
+                        (click)="onMemberSelected(selectedMemberId!)">
+                        Select
+                    </button>
+                </div>
+            </div>
+        </ng-template>
+    </ion-modal>
+
     <!-- Floating Action Button -->
     <button
         type="button"
